@@ -1,211 +1,167 @@
 package com.example.hh3week.adapter.in.controller;
 
-import com.example.hh3week.adapter.in.dto.user.UserDto;
-import com.example.hh3week.adapter.in.dto.user.UserPointHistoryDto;
-import com.example.hh3week.application.useCase.UserUseCaseInteract;
-import com.example.hh3week.domain.user.entity.PointStatus;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-
-import java.time.LocalDateTime;
-import java.util.List;
-
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-class UserControllerTest {
+import java.util.Arrays;
+import java.util.List;
 
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
+
+import com.example.hh3week.adapter.in.dto.user.UserDto;
+import com.example.hh3week.adapter.in.dto.user.UserPointHistoryDto;
+import com.example.hh3week.application.port.in.UserUseCase;
+import com.example.hh3week.domain.user.entity.PointStatus;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+@WebMvcTest(UserController.class)
+public class UserControllerTest {
+
+	@Autowired
 	private MockMvc mockMvc;
 
-	@Mock
-	private UserUseCaseInteract userUseCaseInteractor;
+	@MockBean
+	private UserUseCase userUseCase;
 
-	@InjectMocks
-	private UserController userController;
-
+	@Autowired
 	private ObjectMapper objectMapper;
 
-	@BeforeEach
-	void setUp() {
-		MockitoAnnotations.openMocks(this);
-		// ObjectMapper 설정
-		objectMapper = new ObjectMapper();
-		objectMapper.registerModule(new JavaTimeModule());
-		objectMapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
-		mockMvc = MockMvcBuilders.standaloneSetup(userController).build();
-	}
-
 	@Test
-	@DisplayName("포인트 충전 성공")
-	void handlePointTransaction_Success() throws Exception {
+	@DisplayName("사용자 포인트 충전 또는 사용 성공")
+	void 사용자_포인트_충전_또는_사용_성공() throws Exception {
 		// Given
-		long userId = 1L;
-		long depositAmount = 100L;
 		UserPointHistoryDto requestDto = UserPointHistoryDto.builder()
-			.historyId(0L)
-			.userId(userId)
-			.pointAmount(depositAmount)
+			.userId(1L)
+			.pointAmount(1000L)
 			.pointStatus(PointStatus.EARN)
-			.pointDt(LocalDateTime.now())
 			.build();
 
 		UserPointHistoryDto responseDto = UserPointHistoryDto.builder()
-			.historyId(1L)
-			.userId(userId)
-			.pointAmount(depositAmount)
+			.userId(1L)
+			.pointAmount(1000L)
 			.pointStatus(PointStatus.EARN)
-			.pointDt(requestDto.getPointDt())
 			.build();
 
-		when(userUseCaseInteractor.handleUserPoint(any(UserPointHistoryDto.class))).thenReturn(responseDto);
+		when(userUseCase.handleUserPoint(requestDto)).thenReturn(responseDto);
 
 		// When & Then
-		mockMvc.perform(post("/api/v1/point")
-				.contentType(MediaType.APPLICATION_JSON)
+		mockMvc.perform(post("/api/v1/users/handleUserPoint").contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(requestDto)))
 			.andExpect(status().isOk())
-			.andExpect(jsonPath("$.historyId").value(1L))
-			.andExpect(jsonPath("$.userId").value(userId))
-			.andExpect(jsonPath("$.pointAmount").value(depositAmount))
-			.andExpect(jsonPath("$.pointStatus").value("EARN"));
+			.andExpect(content().json(objectMapper.writeValueAsString(responseDto)));
 
-		verify(userUseCaseInteractor, times(1)).handleUserPoint(any(UserPointHistoryDto.class));
+		verify(userUseCase, times(1)).handleUserPoint(requestDto);
 	}
 
+	@Test
+	@DisplayName("사용자 포인트 충전 또는 사용 실패 - 유효하지 않은 DTO")
+	void 사용자_포인트_충전_또는_사용_실패_유효하지_않은_DTO() throws Exception {
+		// Given
+		UserPointHistoryDto requestDto = UserPointHistoryDto.builder().userId(0L) // 유효하지 않은 userId
+			.pointAmount(1000L).pointStatus(PointStatus.EARN).build();
+
+		when(userUseCase.handleUserPoint(requestDto)).thenThrow(new IllegalArgumentException("userId는 필수 입력 항목입니다."));
+
+		// When & Then
+		mockMvc.perform(post("/api/v1/users/handleUserPoint").contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(requestDto)))
+			.andExpect(status().isBadRequest())
+			.andExpect(content().string("userId는 필수 입력 항목입니다."));
+
+		verify(userUseCase, times(1)).handleUserPoint(requestDto);
+	}
 
 	@Test
-	@DisplayName("포인트 충전 시 잘못된 입력 (음수 금액)")
-	void handlePointTransaction_InvalidAmount() throws Exception {
+	@DisplayName("사용자 포인트 충전 또는 사용 시 서버 오류 발생")
+	void 사용자_포인트_충전_또는_사용_시_서버_오류_발생() throws Exception {
 		// Given
-		long userId = 1L;
-		long depositAmount = -100L;
 		UserPointHistoryDto requestDto = UserPointHistoryDto.builder()
-			.historyId(0L)
-			.userId(userId)
-			.pointAmount(depositAmount)
+			.userId(1L)
+			.pointAmount(1000L)
 			.pointStatus(PointStatus.EARN)
-			.pointDt(LocalDateTime.now())
 			.build();
 
-		when(userUseCaseInteractor.handleUserPoint(any(UserPointHistoryDto.class)))
-			.thenThrow(new IllegalArgumentException("포인트 금액은 양수여야 합니다."));
+		when(userUseCase.handleUserPoint(requestDto)).thenThrow(new RuntimeException("서버 오류"));
 
 		// When & Then
-		mockMvc.perform(post("/api/v1/point")
-				.contentType(MediaType.APPLICATION_JSON)
+		mockMvc.perform(post("/api/v1/users/handleUserPoint").contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(requestDto)))
-			.andExpect(status().isBadRequest());
+			.andExpect(status().isInternalServerError())
+			.andExpect(content().string("서버 오류가 발생했습니다. 잠시 후 다시 시도해 주세요."));
 
-		verify(userUseCaseInteractor, times(1)).handleUserPoint(any(UserPointHistoryDto.class));
+		verify(userUseCase, times(1)).handleUserPoint(requestDto);
 	}
 
 	@Test
-	@DisplayName("사용자 잔액 조회 성공")
-	void getBalance_Success() throws Exception {
+	@DisplayName("사용자 포인트 히스토리 조회 성공")
+	void 사용자_포인트_히스토리_조회_성공() throws Exception {
 		// Given
-		long userId = 1L;
-		UserDto userDto = UserDto.builder()
-			.userId(userId)
-			.userName("testUser")
-			.pointBalance(400L)
-			.build();
+		UserDto requestDto = UserDto.builder().userId(1L).build();
 
-		when(userUseCaseInteractor.getUserInfo(userId)).thenReturn(userDto);
-
-		// When & Then
-		mockMvc.perform(get("/api/v1/balance/{userId}", userId))
-			.andExpect(status().isOk())
-			.andExpect(jsonPath("$.userId").value(userId))
-			.andExpect(jsonPath("$.userName").value("testUser"))
-			.andExpect(jsonPath("$.pointBalance").value(400L));
-
-		verify(userUseCaseInteractor, times(1)).getUserInfo(userId);
-	}
-
-	@Test
-	@DisplayName("사용자 잔액 조회 시 사용자 없음")
-	void getBalance_UserNotFound() throws Exception {
-		// Given
-		long userId = 2L;
-
-		when(userUseCaseInteractor.getUserInfo(userId)).thenThrow(new IllegalArgumentException("사용자를 찾을 수 없습니다."));
-
-		// When & Then
-		mockMvc.perform(get("/api/v1/balance/{userId}", userId))
-			.andExpect(status().isNotFound());
-
-		verify(userUseCaseInteractor, times(1)).getUserInfo(userId);
-	}
-
-	@Test
-	@DisplayName("특정 사용자의 포인트 히스토리 조회 성공 (데이터 존재)")
-	void getUserPointHistory_Success_WithData() throws Exception {
-		// Given
-		long userId = 1L;
-
-		UserPointHistoryDto historyDto1 = UserPointHistoryDto.builder()
-			.historyId(1L)
-			.userId(userId)
-			.pointAmount(100L)
+		UserPointHistoryDto history1 = UserPointHistoryDto.builder()
+			.userId(1L)
+			.pointAmount(1000L)
 			.pointStatus(PointStatus.EARN)
-			.pointDt(LocalDateTime.now().minusDays(2))
 			.build();
 
-		UserPointHistoryDto historyDto2 = UserPointHistoryDto.builder()
-			.historyId(2L)
-			.userId(userId)
-			.pointAmount(-50L)
+		UserPointHistoryDto history2 = UserPointHistoryDto.builder()
+			.userId(1L)
+			.pointAmount(500L)
 			.pointStatus(PointStatus.USE)
-			.pointDt(LocalDateTime.now().minusDays(1))
 			.build();
 
-		List<UserPointHistoryDto> mockHistoryList = List.of(historyDto1, historyDto2);
+		List<UserPointHistoryDto> expectedHistories = Arrays.asList(history1, history2);
 
-		when(userUseCaseInteractor.getUserPointHistoryListByUserId(userId)).thenReturn(mockHistoryList);
+		when(userUseCase.getUserPointHistoryListByUserId(1L)).thenReturn(expectedHistories);
 
 		// When & Then
-		mockMvc.perform(get("/api/v1/point/history/{userId}", userId))
+		mockMvc.perform(post("/api/v1/users/getUserPointHistoryListByUserId").contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(requestDto)))
 			.andExpect(status().isOk())
-			.andExpect(jsonPath("$.length()").value(2))
-			.andExpect(jsonPath("$[0].historyId").value(1L))
-			.andExpect(jsonPath("$[0].userId").value(userId))
-			.andExpect(jsonPath("$[0].pointAmount").value(100L))
-			.andExpect(jsonPath("$[0].pointStatus").value("EARN"))
-			.andExpect(jsonPath("$[1].historyId").value(2L))
-			.andExpect(jsonPath("$[1].userId").value(userId))
-			.andExpect(jsonPath("$[1].pointAmount").value(-50L))
-			.andExpect(jsonPath("$[1].pointStatus").value("USE"));
+			.andExpect(content().json(objectMapper.writeValueAsString(expectedHistories)));
 
-		verify(userUseCaseInteractor, times(1)).getUserPointHistoryListByUserId(userId);
+		verify(userUseCase, times(1)).getUserPointHistoryListByUserId(1L);
 	}
 
 	@Test
-	@DisplayName("특정 사용자의 포인트 히스토리 조회 성공 (데이터 없음)")
-	void getUserPointHistory_Success_NoData() throws Exception {
+	@DisplayName("사용자 포인트 히스토리 조회 실패 - userId 누락")
+	void 사용자_포인트_히스토리_조회_실패_userId_누락() throws Exception {
 		// Given
-		long userId = 2L;
-
-		List<UserPointHistoryDto> mockHistoryList = List.of(); // 빈 리스트
-
-		when(userUseCaseInteractor.getUserPointHistoryListByUserId(userId)).thenReturn(mockHistoryList);
+		UserDto requestDto = UserDto.builder().userId(0L) // 유효하지 않은 userId
+			.build();
 
 		// When & Then
-		mockMvc.perform(get("/api/v1/point/history/{userId}", userId))
-			.andExpect(status().isOk())
-			.andExpect(jsonPath("$.length()").value(0));
+		mockMvc.perform(post("/api/v1/users/getUserPointHistoryListByUserId").contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(requestDto)))
+			.andExpect(status().isBadRequest())
+			.andExpect(content().string("userId는 필수 입력 항목입니다."));
 
-		verify(userUseCaseInteractor, times(1)).getUserPointHistoryListByUserId(userId);
+		verify(userUseCase, never()).getUserPointHistoryListByUserId(anyLong());
+	}
+
+	@Test
+	@DisplayName("사용자 포인트 히스토리 조회 시 서버 오류 발생")
+	void 사용자_포인트_히스토리_조회_시_서버_오류_발생() throws Exception {
+		// Given
+		UserDto requestDto = UserDto.builder().userId(999L) // 존재하지 않는 사용자 ID 등
+			.build();
+
+		when(userUseCase.getUserPointHistoryListByUserId(999L)).thenThrow(new RuntimeException("서버 오류"));
+
+		// When & Then
+		mockMvc.perform(post("/api/v1/users/getUserPointHistoryListByUserId").contentType(MediaType.APPLICATION_JSON)
+				.content(objectMapper.writeValueAsString(requestDto)))
+			.andExpect(status().isInternalServerError())
+			.andExpect(content().string("서버 오류가 발생했습니다. 잠시 후 다시 시도해 주세요."));
+
+		verify(userUseCase, times(1)).getUserPointHistoryListByUserId(999L);
 	}
 }
